Added welcome and program pdfs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
         <activity android:name=".EventDetailsActivity" />
         <activity android:name=".EatAndDrinkActivity" />
         <activity android:name=".SeeAndDoActivity"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
